testsuite/tests/tool-toplevel/error_highlighting.compilers.reference
Characters 197-204:
  let x = (1 + 2) +. 3. in ();;
          ^^^^^^^
Error: This expression has type int but an expression was expected of type
         float
Characters 9-18:
  let x = (1 + 2 in ();;
          ^      ^^
Syntax error: ')' expected, the highlighted '(' might be unmatched
Characters 9-17:
  let x = (1 + 2;;
          ^     ^^
Syntax error: ')' expected, the highlighted '(' might be unmatched
Characters 22-23:
  let y = 1 +. 2. in
          ^
Error: This expression has type int but an expression was expected of type
         float
Characters 9-20:
  ........(.
  ...
  ..in
Syntax error: ')' expected, the highlighted '(' might be unmatched
Characters 9-18:
  ........(1
    +
  2)...
Error: This expression has type int but an expression was expected of type
         float
File "error_highlighting_use1.ml", line 1, characters 8-15:
Error: This expression has type int but an expression was expected of type
         float
File "error_highlighting_use2.ml", line 1, characters 15-17:
Error: Syntax error: ')' expected
File "error_highlighting_use2.ml", line 1, characters 8-9:
Error: This '(' might be unmatched
File "error_highlighting_use3.ml", line 3, characters 2-4:
Error: Syntax error: ')' expected
File "error_highlighting_use3.ml", line 1, characters 8-9:
Error: This '(' might be unmatched
File "error_highlighting_use4.ml", line 1, characters 8-17:
Error: This expression has type int but an expression was expected of type
         float

